enum GovProposalVoteOption {
  EMPTY,
  YES,
  ABSTAIN,
  NO,
  NO_WITH_VETO,
}

enum TxStatus {
  Success
  Error
}

type EventAttribute @entity {
  id: ID!
  key: String!
  value: String!
  event: Event!
}

type Block @entity {
  id: ID! # The block header hash
  chainId: String! @index
  height: BigInt! @index
  timestamp: Date!
  transactions: [Transaction] @derivedFrom(field: "block")
  messages: [Message] @derivedFrom(field: "block")
  events: [Event] @derivedFrom(field: "block")
}

type Transaction @entity {
  id: ID!
  block: Block!
  gasUsed: BigInt!
  gasWanted: BigInt!
  fees: [Coin]!
  memo: String
  status: TxStatus!
  log: String!
  timeoutHeight: BigInt @index
  # NB: only the first signer!
  signerAddress: String! @index
  account: Account!
  messages: [Message] @derivedFrom(field: "transaction")
}

type Message @entity {
  id: ID!
  typeUrl: String! @index
  json: String!
  transaction: Transaction!
  block: Block!
}

type Event @entity {
  id: ID!
  type: String! @index
  attributes: [EventAttribute]! @derivedFrom(field: "event")
  log: String!
  transaction: Transaction!
  block: Block!
}

type ExecuteContractMessage @entity {
  id: ID!
  contract: Contract!
  method: String! @index
  funds: [Coin]!
  message: Message!
  transaction: Transaction!
  block: Block!
}

type GovProposalVote @entity {
  id: ID!
  proposalId: String! @index
  voterAddress: String! @index
  option: GovProposalVoteOption!
  message: Message!
  transaction: Transaction!
  block: Block!
  #  TODO:
  #  weightedOptions: []
}

type DistDelegatorClaim @entity {
  id: ID!
  delegatorAddress: String!
  validatorAddress: String!
  message: Message!
  transaction: Transaction!
  block: Block!
  # TODO:
  #  validator: Validator!
  # TODO: also available via msg in cosmos-sdk (baseline) v0.46
    amount: BigInt!
    denom: String!
}

type Contract @entity {
  id: ID!
  interface: Interface!
  storeMessage: StoreContractMessage!
  instantiateMessage: InstantiateContractMessage!
}

type LegacyBridgeSwap @entity {
  id: ID! # id field is always required and must look like this
  destination: String!
  contract: Contract!
  amount: BigInt!
  denom: String!
  executeContractMessage: ExecuteContractMessage!
  message: Message!
  transaction: Transaction!
  block: Block!
}

type Coin @jsonField {
  denom: String!
  amount: String!
}

type NativeTransfer @entity {
  id: ID!
  toAddress: String! @index
  fromAddress: String! @index
  amounts: [Coin]!
  denom: String! @index
  message: Message!
  transaction: Transaction!
  block: Block!
}

type Cw20Transfer @entity {
  id: ID!
  toAddress: String! @index
  fromAddress: String! @index
  contract: Contract!
  amount: BigInt!
  message: Message!
  transaction: Transaction!
  block: Block!
}

type Account @entity {
  # id is the address
  id: ID!
  chainId: String! @index
  transactions: [Transaction]! @derivedFrom(field: "account")
  nativeBalanceChanges: [NativeBalanceChange]! @derivedFrom(field: "account")
  cw20BalanceChanges: [Cw20BalanceChange]! @derivedFrom(field: "account")
  genesisBalances: [GenesisBalance] @derivedFrom(field: "account")
}

type GenesisBalance @entity {
    id: ID!
    amount: BigInt!
    denom: String! @index
    account: Account!
}

type AuthzExec @entity {
  id: ID!
  grantee: String! @index
  subMessages: [AuthzExecMessage]! @derivedFrom(field: "authzExec")
  message: Message!
  transaction: Transaction!
  block: Block!
}

type Endpoint @jsonField {
  url: String!
  weight: Int!
}

type Agent @entity {
  # id is the agent's address
  id: ID!
  almanacRegistrations: [AlmanacRegistration] @derivedFrom(field: "agent")
}

type AlmanacService @jsonField {
  protocols: [String!]
  endpoints: [Endpoint!]!
}

type AlmanacRecord @entity {
  id: ID!
  service: AlmanacService
#  registration: AlmanacRegistration! @derivedFrom(field: "record")
#  event: Event!
  transaction: Transaction!
  block: Block!
}

type AlmanacRegistration @entity {
  id: ID!
  expiryHeight: BigInt! @index
  agent: Agent!
  signature: String!
  sequence: Int!
  contract: Contract!
  record: AlmanacRecord!
#  TODO(workaround): consider relating to message
#  event: Event!
  transaction: Transaction!
  block: Block!
}

# NB: AuthzExec --|{ Message join table
type AuthzExecMessage @entity {
  id: ID!
  authzExec: AuthzExec!
  message: Message!
}

type NativeBalanceChange @entity {
  id: ID!
  balanceOffset: BigInt!
  denom: String! @index
  account: Account!
  event: Event!
  transaction: Transaction!
  block: Block!
}

type IbcTransfer @entity {
  id: ID!
  toAddress: String! @index
  fromAddress: String! @index
  amount: Coin!
  denom: String! @index
  sourceChannel: String! @index
  sourcePort: String! @index
  event: Event!
  message: Message!
  transaction: Transaction!
  block: Block!
}

type Cw20BalanceChange @entity {
  id: ID!
  balanceOffset: BigInt!
  contract: Contract!
  account: Account!
  executeContractMessage: ExecuteContractMessage!
  event: Event!
  message: Message!
  transaction: Transaction!
  block: Block!
}

enum Interface {
  Uncertain,
  CW20,
  LegacyBridgeSwap,
}

enum AccessType {
#	// AccessTypeUnspecified placeholder for empty value
	Unspecified,
#	// AccessTypeNobody forbidden
	AccessTypeNobody,
#	// AccessTypeOnlyAddress restricted to a single address
#	// Deprecated: use AccessTypeAnyOfAddresses instead
	AccessTypeOnlyAddress,
#	// AccessTypeEverybody unrestricted
	AccessTypeEverybody,
#	// AccessTypeAnyOfAddresses allow any of the addresses
	AccessTypeAnyOfAddresses,
}

type CW20Contract @entity {
  id: ID!
  contract: Contract!
}

type StoreContractMessage @entity {
  id: ID!
  sender: String!
  permission: AccessType
  contracts: [Contract] @derivedFrom(field: "storeMessage")
  codeId: Int! @index
  message: Message!
  transaction: Transaction!
  block: Block!
}

type InstantiateContractMessage @entity {
  id: ID!
  sender: String! @index
  admin: String!
  codeId: Int!
  label: String!
  payload: String!
  funds: [Coin]
  message: Message!
  transaction: Transaction!
  block: Block!
}

type UnprocessedEntity @entity {
  id: ID!
  error: String!
  event: Event
  message: Message
  transaction: Transaction
  block: Block
}
