@startuml
entity Block {
  +id
  +chainId
  +height
  timestamp
  ..relations..
  transactions
  messages
  events
}

entity Transaction {
  +id
  gasUsed
  gasWanted
  fees
  memo
  status
  log
  +timeoutHeight
  +signerAddress
  ..relations..
  account
  events
  messages
  block
}

entity Message {
  +id
  +typeUrl
  json
  ..relations..
  transaction
  block
}

entity Event {
  +id
  +type
  log
  ..relations..
  attributes
  transaction
  block

}

entity EventAttribute {
  +id
  +key
  +value
  ..relations..
  event
}

entity Account {
    +id
    +chainId
    ..relations..
    transactions
    nativeBalanceChanges
    cw20BalanceChanges
    genesisBalances
}


Block ||--o{ Transaction
Block ||--o{ Message
Block ||--o{ Event

Transaction }|--|| Account
Transaction ||--|{ Event
Transaction ||--|{ Message

EventAttribute }|--|| Event
@enduml
